# Macro-and-Market-cycle-Screener

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  pyproject.toml
.github/workflows/: weekly-report.yml
dashboard/: app.py
data/public_research_evidence/: research_facts.csv  subsector_research_profiles.csv
docs/: continuation_prompt.md  github_pages_setup.md  github_static_report_roadmap.md  knowledge_base_review.md  market_researcher_repo_evaluation.md  next_step_prompt.md  open_data_expansion_plan.md  publication_policy.md
docs/knowledge_base/: global_macro_market_cycle_knowledge_base.md
src/cycle_screener/: __init__.py  build_static_site.py  change_tracking.py  charts.py  config.py  connectors.py  cycle_state.py  export_static.py  indicators.py  publication.py  refresh.py  report_state.py  research.py  sample_data.py  scoring.py  sources.py  static_site.py  static_site_qa.py  storage.py  taxonomy.py
tests/: test_cycle_state.py  test_github_workflow.py  test_report_state_changes.py  test_scoring.py  test_storage_refresh.py
